# RGB-Indicator

./: CMakeLists - Copy.txt  CMakeLists.txt  README.md  prj.conf  readme.txt
boards/: mtc2n9151_nrf9151.overlay  mtc2n9151_nrf9151_ns.overlay  nrf9151dk_nrf9151_ns.overlay
drivers/rgb-indicator/: rgb-indicator.c
src/: main.c  rgb-indicator.c  rgb-indicator.h  rgb_indicator.c
